n/a - July 31, 2004
	
	* Moved PIDFILE check to getpids and removed arguments from
	  killproc and reloadproc.  Signals are now set at begining of
	  funtcions script with KILLDELAY. (DJ)
	* Added a optional service script which can set the MTU for a given
	  interface

n/a - July 21, 2004

	* Committed DJ Lucas's patch for the killproc function.  It no longer requires
	  arguments if PIDFILE is set
	* added --backup to all sysconfig configuration files, so they are not
	  replaced on a make install

n/a - July 13, 2004

	* Added the PEER variable to the ifconfig.*/* file, done by Kevin P. Fleming

2.2.1 - July 12, 2004

	* Tagged as 2.2.1

n/a - July 12, 2004

	* Hotplug was moved from rcsysinit.d to rc{1,2,3,4,5} to help bring up/down
	  network interfaces started by hotplug.  This has been revoked at this time
	* Networking interfaces are now brought down in reverse order
	* Moved the ONBOOT check to within ifup/ifdown, so we can bring up/down
	  the interfaces at boottime/shutdown properly, done by Kevin P. Fleming
	* use PREFIX instead of NETMASK for adding addresses in ipv4-static, done by
	  Kevin P. Fleming
	* fix reversal of services inside ifconfig.* directories in ifdown, done by
	  Kevin P. Fleming
	* add ipv4-static-route service, supplied by Kevin P. Fleming

2.2.0 - July 12, 2004

	* Tagged as 2.2.0

n/a - July 11, 2004

	* Minor script output changes
	* Repaired networking scripts broken in previous commits

n/a - July 10, 2004

	* We now use the ip program [from iproute2] instead of ipconfig [net-tools]
	  to bring up/down ethernet interfaces, and local connections, submitted by
	  Jim Gifford
	* Removed gateway backward compatibility
	* Removed ifup-eth0 ifdown-eth0 compatibility
	* Removed the "assume SERVICE=static if SERVICE is unset" compatibility
	* pass the IFCONFIG environmental variable to services, so they can locate
		the file with the parameters they must read
	* rename static to ipv4-static